--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#set apart 2023-09-03
+firebaseConfig/
+index.js
+.firebase
+.firebaserc
+firebase.json
+
+
 # dependencies
 /node_modules
 /.pnp
@@ -18,6 +26,8 @@
 .env.test.local
 .env.production.local
 
+firestore.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+src/firebase.js
